# Nicole

./: .gitignore  PHASE_A_RECOMMENDATIONS.md  image_analysis.py  main.py  package-lock.json  pyproject.toml  quality_assessment_guide.md  visualize_data.py
eye_data_collection/: manage.py  requirements.txt
eye_data_collection/eye_data_collection/: asgi.py  settings.py  urls.py  wsgi.py
eye_data_collection/templates/: base.html
eye_data_collection/templates/uploads/: success.html  upload_form.html
eye_data_collection/uploads/: admin.py  forms.py  models.py  urls.py  views.py
eye_data_collection/uploads/migrations/: 0001_initial.py  0002_submission_consent.py  0003_submission_camera_type.py
plans/: frontend-simplification-plan.md
