[project]
name = "nicole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "django>=5.1.0",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9.9",
]
